Fix: product overflow, menu bugs, logo alt

--- a/styles/blocks/_header.scss
+++ b/styles/blocks/_header.scss
@@ -34,6 +34,7 @@
 }
 
 .header-logo{
+   text-decoration: none;
    margin-right: 41px; 
 }
 
@@ -59,7 +60,6 @@
     right: 0;
     top: 77px;
     width: 232px;
-    height: 764px;
     padding: 33px;
     box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
     box-sizing: border-box;  
