--- a/styles/blocks/_product.scss
+++ b/styles/blocks/_product.scss
@@ -6,6 +6,7 @@
     justify-content: center;
 	position: relative;
     background: #F7F7F7;
+    overflow: hidden;
 }
 
 .product-photo{
