--- a/styles/style.css
+++ b/styles/style.css
@@ -75,6 +75,7 @@ button {
 }
 
 .header-logo {
+  text-decoration: none;
   margin-right: 41px;
 }
 
@@ -96,7 +97,6 @@ button {
   right: 0;
   top: 77px;
   width: 232px;
-  height: 764px;
   padding: 33px;
   box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
   box-sizing: border-box;
@@ -1542,6 +1542,7 @@ button {
   justify-content: center;
   position: relative;
   background: #F7F7F7;
+  overflow: hidden;
 }
 
 .product-photo {
